# capslap

./: .gitignore  README.md
.cursor/rules/: electron.mdc
electron/: bun.lockb  electron-builder.yml  fix-production-build.sh  package.json  tsconfig.node.json
electron/app/: app.tsx  index.html  renderer.tsx
electron/app/components/: ModelDownloader.tsx  TitleBar.tsx
electron/app/components/ui/: button.tsx  dialog.tsx  select.tsx  switch.tsx  tooltip.tsx
electron/app/styles/: app.css  globals.css
electron/lib/main/: app.ts  main.ts  sidecar.ts
electron/lib/preload/: api.ts  index.d.ts  preload.ts
rust/: .gitignore  Cargo.toml
rust/bin-win/: README.md
rust/src/: audio.rs  captions.rs  lib.rs  rpc.rs  types.rs  video.rs  whisper.rs
scripts/: download-ffmpeg.sh
