
[package]
name = "core"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
tempfile = "3"
regex = "1"
blake3 = "1"
time = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "gzip", "brotli", "deflate", "stream", "rustls-tls"] }
futures-util = "0.3"
mime_guess = "2"
which = "8.0.0"
hex_color = "3.0.0"
image = "0.25"
base64 = "0.22"